--- a/core/templates/pages/about-page/about-page.component.html
+++ b/core/templates/pages/about-page/about-page.component.html
@@ -134,6 +134,7 @@
     <div class="oppia-about-extra-container">
       <div class="oppia-static-extra-content oppia-about-clearfix">
         <div class="oppia-about-otter-container">
+          A simple change :)
           <picture>
             <source type="image/webp" [src]="getStaticImageUrl('/general/about_page_mascot.webp')">
             <source type="image/png" [src]="getStaticImageUrl('/general/about_page_mascot.png')">
